--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="input-stone">
         <button class="input-rock-button">
-          <img src="images/icon-rock.svg" alt="rock">
+          <img src="images/icon-rock.svg" alt="">
         </button>
       </div>
     </div>
@@ -39,16 +39,18 @@
       <div class="you-picked">
         <p>YOU PICKED</p>
         <button>
-          <img src="" alt="">
+          <img class="user-pick" src="" alt="">
         </button>
       </div>
-      <div class="win-or-lose">
+      <div>
+        <p class="win-or-lose">
 
+        </p>
       </div>
       <div class="house-picked">
         <p>THE HOUSE PICKED</p>
         <button>
-          <img src="" alt="">
+          <img class="house-pick" src="" alt="">
         </button>
       </div>
     </div>
