addded set timeout

--- a/index.html
+++ b/index.html
@@ -19,39 +19,42 @@
       </div>
     </div>
 
-    <div class="user-input">
-      <div class="input-paper-scissors">
-        <button class="input-paper-button">
-          <img src="images/icon-paper.svg" alt="paper">
-        </button>
-        <button class="input-scissors-button">
-          <img src="images/icon-scissors.svg" alt="scissors">
-        </button>
-      </div>
-      <div class="input-stone">
-        <button class="input-rock-button">
-          <img src="images/icon-rock.svg" alt="">
-        </button>
+    <div class="step-1">
+      <div class="user-input">
+        <div class="input-paper-scissors">
+          <button class="input-paper-button">
+            <img src="images/icon-paper.svg" alt="paper">
+          </button>
+          <button class="input-scissors-button">
+            <img src="images/icon-scissors.svg" alt="scissors">
+          </button>
+        </div>
+        <div class="input-stone">
+          <button class="input-rock-button">
+            <img src="images/icon-rock.svg" alt="">
+          </button>
+        </div>
       </div>
     </div>
 
-    <div class="user-and-computer-pick">
-      <div class="you-picked">
-        <p>YOU PICKED</p>
-        <button>
-          <img class="user-pick" src="" alt="">
-        </button>
-      </div>
-      <div>
-        <p class="win-or-lose">
-
-        </p>
-      </div>
-      <div class="house-picked">
-        <p>THE HOUSE PICKED</p>
-        <button>
-          <img class="house-pick" src="" alt="">
-        </button>
+    <div class="step-2 none">
+      <div class="user-and-computer-pick">
+        <div class="you-picked">
+          <p>YOU PICKED</p>
+          <button>
+            <img class="user-pick" src="" alt="">
+          </button>
+        </div>
+        <div>
+          <p class="win-or-lose">
+          </p>
+        </div>
+        <div class="house-picked">
+          <p>THE HOUSE PICKED</p>
+          <button>
+            <img class="house-pick" src="" alt="">
+          </button>
+        </div>
       </div>
     </div>
 
