fully functionally working

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="score-container">
       <div class="game-name">ROCK<br>PAPER<br>SCISSORS</div>
       <div class="score-board">
-        <p>SCORE <br>12</p>
+        <p>SCORE <br><span class="score"></span></p>
       </div>
     </div>
 
