--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Rock, Paper, Scissors</title>
 </head>
@@ -13,9 +16,12 @@
   <div class="container">
 
     <div class="score-container">
-      <div class="game-name">ROCK<br>PAPER<br>SCISSORS</div>
+      <div class="game-name">
+        ROCK<br>PAPER<br>SCISSORS
+      </div>
       <div class="score-board">
-        <p>SCORE <br><span class="score"></span></p>
+       <div class="inside-score-board"> <span class="score-header">SCORE</span><br>
+        <span class="score"></span></div>
       </div>
     </div>
 
