--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
       <div class="user-and-computer-pick">
         <div class="you-picked">
           <p>YOU PICKED</p>
-          <button>
-            <img class="user-pick" src="" alt="">
+          <button class="you-picked-button">
+            <img class="you-pick" src="" alt="">
           </button>
         </div>
-        <div>
+        <div class="none">
           <p class="win-or-lose">
           </p>
         </div>
         <div class="house-picked">
           <p>THE HOUSE PICKED</p>
-          <button>
-            <img class="house-pick" src="" alt="">
+          <button class="house-picked-button null-house">
+            <img class="house-pick none" src="" alt="">
           </button>
         </div>
       </div>
