--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 
     <div class="step-2 none">
       <div class="user-and-computer-pick">
-        <div class="you-picked">
+        <div class="you-picked element">
           <p>YOU PICKED</p>
           <button class="you-picked-button">
             <img class="you-pick" src="" alt="">
           </button>
         </div>
-        <div class="none">
+        <div class="result-container none element">
           <p class="win-or-lose">
           </p>
         </div>
-        <div class="house-picked">
+        <div class="house-picked element">
           <p>THE HOUSE PICKED</p>
           <button class="house-picked-button null-house">
             <img class="house-pick none" src="" alt="">
