almost done step 4 part 1

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
 
     <div class="step-2 none">
       <div class="user-and-computer-pick">
-        <div class="you-picked element">
-          <p>YOU PICKED</p>
+        <div class="you-picked">
+          <p class="picked-header">YOU PICKED</p>
           <button class="you-picked-button">
             <img class="you-pick" src="" alt="">
           </button>
         </div>
-        <div class="result-container none element">
-          <p class="win-or-lose">
-          </p>
+        <div class="picked-header result-container none ">
+          <div class="win-or-lose">
+          </div>
         </div>
         <div class="house-picked element">
-          <p>THE HOUSE PICKED</p>
+          <p class="picked-header">THE HOUSE PICKED</p>
           <button class="house-picked-button null-house">
             <img class="house-pick none" src="" alt="">
           </button>
