before adding stacked circles

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
           <div class="win-or-lose">
           </div>
         </div>
-        <div class="house-picked element">
+        <div class="house-picked">
           <p class="picked-header">THE HOUSE PICKED</p>
-          <button class="house-picked-button null-house">
-            <img class="house-pick none" src="" alt="">
-          </button>
+            <button class="house-picked-button null-house">
+              <img class="house-pick none" src="" alt="">
+            </button>
         </div>
       </div>
     </div>
