--- a/index.html
+++ b/index.html
@@ -47,19 +47,26 @@
       <div class="user-and-computer-pick">
         <div class="you-picked">
           <p class="picked-header">YOU PICKED</p>
-          <button class="you-picked-button">
-            <img class="you-pick" src="" alt="">
-          </button>
+          <div class="picked-btn-img">
+            <button class="you-picked-button">
+              <img class="you-pick" src="" alt="">
+            </button>
+          </div>
         </div>
-        <div class="picked-header result-container none ">
+        <div class="result-container none ">
           <div class="win-or-lose">
           </div>
         </div>
         <div class="house-picked">
           <p class="picked-header">THE HOUSE PICKED</p>
-            <button class="house-picked-button null-house">
-              <img class="house-pick none" src="" alt="">
-            </button>
+            <div class="picked-btn-img">
+              <button class="bf-button null-house">
+                <img class="house-pick none" src="" alt="">
+              </button>
+            </div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
         </div>
       </div>
     </div>
