--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
               <img class="you-pick" src="" alt="">
             </button>
           </div>
+          <div class="winner-you none">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
         </div>
         <div class="result-container none ">
           <div class="win-or-lose">
@@ -64,9 +69,11 @@
                 <img class="house-pick none" src="" alt="">
               </button>
             </div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
+            <div class="winner-house none">
+              <div class="circle"></div>
+              <div class="circle"></div>
+              <div class="circle"></div>
+            </div>
         </div>
       </div>
     </div>
