--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="score-container">
       <div class="game-name">
-        ROCK<br>PAPER<br>SCISSORS
+        <img src="images/logo.svg" alt="game-logo" width="100px">
       </div>
       <div class="score-board">
        <div class="inside-score-board"> <span class="score-header">SCORE</span><br>
@@ -77,9 +77,11 @@
         </div>
       </div>
     </div>
-
+    <button class="rules-button" onclick="displayRules();">RULES</button>
+    <div class="show-rules none">
+    </div>
   </div>
-  
+    
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
