completed mobile design

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <div class="container">
 
     <div class="score-container">
-      <div class="game-name">
-        <img src="images/logo.svg" alt="game-logo" width="100px">
-      </div>
+      <img class="logo" src="images/logo.svg" alt="game-logo">
       <div class="score-board">
        <div class="inside-score-board"> <span class="score-header">SCORE</span><br>
         <span class="score"></span></div>
@@ -77,10 +75,10 @@
         </div>
       </div>
     </div>
-    <button class="rules-button" onclick="displayRules();">RULES</button>
     <div class="show-rules none">
     </div>
   </div>
+  <button class="rules-button" onclick="displayRules();">RULES</button>
     
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
