--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/hemanth110702">Mamidi Hemanth Kumar</a>.
   </div>
 
   <script src="script.js"></script>
