done desktok design full

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
               <button class="user-picked-btn btn-style"> 
                 <img class="user-btn-img" src="" alt="">
               </button>
-            </div>  
-            <div class="winner-you ">
+            </div> 
+            <div class="winner-you none">
               <div class="circle"></div>
               <div class="circle"></div>
               <div class="circle"></div>
@@ -72,11 +72,11 @@
                 <img class="house-btn-img none" src="" alt="">
               </button>
             </div>
-            <!-- <div class="winner-house none">
+            <div class="winner-house none">
               <div class="circle"></div>
               <div class="circle"></div>
               <div class="circle"></div>
-            </div> -->
+            </div> 
           </div>
         </div>
       </div>
