finsihed desktop version

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="house-picked">
             <p class="house-header">THE HOUSE PICKED</p>
             <div class="user-house house-choice"> 
-              <button class="house-picked-btn null-house btn-style">
+              <button class="house-picked-btn null-house ">
                 <img class="house-btn-img none" src="" alt="">
               </button>
             </div>
