changed bg-tri position

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <main>
       <div class="step-1">
         <div class="user-input">
+          <img class="bg-triangle" src="images/bg-triangle.svg" alt="">
           <div class="input-paper-scissors">
               <div class="paper">
                 <button class="input-paper-button btn-style">
