updated readme author

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <div class="step-1">
         <div class="user-input">
-          <img class="bg-triangle" src="images/bg-triangle.svg" alt="">
+          <img class="bg-triangle" src="images/bg-triangle.svg" alt="bg-triangle">
           <div class="input-paper-scissors">
               <div class="paper">
                 <button class="input-paper-button btn-style">
@@ -42,7 +42,7 @@
           <div class="input-rock">
             <div class="rock">
               <button class="input-rock-button btn-style">
-                <img src="images/icon-rock.svg" alt="">
+                <img src="images/icon-rock.svg" alt="icon-rock">
               </button>
             </div>
           </div>
@@ -55,7 +55,7 @@
             <p class="user-header">YOU PICKED</p> 
             <div class="user-house user-choice"> 
               <button class="user-picked-btn btn-style"> 
-                <img class="user-btn-img" src="" alt="">
+                <img class="user-btn-img" src="" alt="user-btn">
               </button>
             </div> 
             <div class="winner-you none">
@@ -70,7 +70,7 @@
             <p class="house-header">THE HOUSE PICKED</p>
             <div class="user-house house-choice"> 
               <button class="fadeIn house-picked-btn null-house">
-                <img class="house-btn-img none" src="" alt="">
+                <img class="house-btn-img none" src="" alt="house-btn">
               </button>
             </div>
             <div class="winner-house none">
